--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,33 @@
     <string name="app_name">CPA web</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="construcao">Em construção</string>
+    <string name="inicio">Inicio</string>
+    <string name="cpa" translatable="false">CPA</string>
+    <string name="c" translatable="false">C</string>
+    <string name="p" translatable="false">P</string>
+    <string name="a" translatable="false">A</string>
+    <string name="entrar">Entrar</string>
+    <string name="naoTemConta">Não possui conta? Cadastre-se</string>
+    <string name="email">Email</string>
+    <string name="senha">Senha</string>
+    <string name="cadastro">Cadastro</string>
+    <string name="tipoPerfil">Qual tipo do seu perfil?</string>
+    <string name="comum">Comum</string>
+    <string name="profissional">Profissional</string>
+    <string name="temConta">Já possui conta? Faça login</string>
+    <string name="cpaGroup" translatable="false">CPAGroup©</string>
+    <string name="recepcao">Bem vindo à</string>
+    <string name="compartilhe">Compartilhe momentos</string>
+    <string name="login">Entrar</string>
+    <string name="criarConta">Criar conta</string>
+    <string name="nomeCompleto">Nome completo</string>
+    <string name="dataNascimento">Data de nascimento</string>
+    <string name="celular">N° Celular</string>
+    <string name="cpf">CPF</string>
+    <string name="confirmaSenha">Confirmar senha</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="finalizar">Finalizar</string>
+    <string name="cadastroSucesso">Cadastro realizado com sucesso!!</string>
+
 </resources>
