--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,34 +1,43 @@
 <resources>
     <string name="app_name">CPA web</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="construcao">Em construção</string>
-    <string name="inicio">Inicio</string>
-    <string name="cpa" translatable="false">CPA</string>
+    <string name="cpaGroup" translatable="false">CPAGroup©</string>
     <string name="c" translatable="false">C</string>
     <string name="p" translatable="false">P</string>
     <string name="a" translatable="false">A</string>
-    <string name="entrar">Entrar</string>
-    <string name="naoTemConta">Não possui conta? Cadastre-se</string>
-    <string name="email">Email</string>
-    <string name="senha">Senha</string>
-    <string name="cadastro">Cadastro</string>
-    <string name="tipoPerfil">Qual tipo do seu perfil?</string>
-    <string name="comum">Comum</string>
-    <string name="profissional">Profissional</string>
-    <string name="temConta">Já possui conta? Faça login</string>
-    <string name="cpaGroup" translatable="false">CPAGroup©</string>
-    <string name="recepcao">Bem vindo à</string>
-    <string name="compartilhe">Compartilhe momentos</string>
-    <string name="login">Entrar</string>
-    <string name="criarConta">Criar conta</string>
-    <string name="nomeCompleto">Nome completo</string>
-    <string name="dataNascimento">Data de nascimento</string>
-    <string name="celular">N° Celular</string>
-    <string name="cpf">CPF</string>
-    <string name="confirmaSenha">Confirmar senha</string>
-    <string name="cancelar">Cancelar</string>
-    <string name="finalizar">Finalizar</string>
-    <string name="cadastroSucesso">Cadastro realizado com sucesso!!</string>
+    <string name="cpa" translatable="false">CPA</string>
+
+    <string name="txt_building">Em construção</string>
+    <string name="txt_home">Inicio</string>
+
+    <string name="txt_welcome">Bem vindo à</string>
+    <string name="txt_share_moments">Compartilhe momentos</string>
+
+    <string name="txt_register">Cadastro</string>
+    <string name="txt_profile_type">Qual tipo do seu perfil?</string>
+    <string name="txt_profile_type_common">Comum</string>
+    <string name="txt_profile_type_professional">Profissional</string>
+    <string name="txt_have_account">Já possui conta? Faça loginn</string>
+    <string name="txt_doesnt_have_account">Não possui conta? Cadastre-se</string>
+
+
+    <string name="txt_signin">Entrar</string>
+    <string name="txt_create_account">Criar conta</string>
+    <string name="lbl_full_name">Nome completo</string>
+    <string name="lbl_birthday">Data de nascimento</string>
+    <string name="lbl_email">Email</string>
+    <string name="lbl_password">Senha</string>
+    <string name="lbl_phone">Celular</string>
+    <string name="lbl_cpf">CPF</string>
+    <string name="lbl_confirm_password">Confirmar senha</string>
+    <string name="txt_cancel">Cancelar</string>
+    <string name="txt_finish">Finalizar</string>
+    <string name="txt_register_sucess">Cadastro realizado com sucesso!!</string>
+    <string name="menu_professionals">Professionals</string>
+    <string name="menu_places">Places</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_blog">Blog</string>
+    <string name="menu_profile">Profile</string>
+
 
 </resources>
