--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,5 +35,11 @@
     <string name="txt_cancel">Cancel</string>
     <string name="txt_finish">Finish</string>
     <string name="txt_register_sucess">Registration done successfully!!</string>
+    <string name="menu_professionals">Professionals</string>
+    <string name="menu_places">Places</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_blog">Blog</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_appointment">Appointments</string>
 
 </resources>
