--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,10 @@
     <string name="txt_cancel">Cancelar</string>
     <string name="txt_finish">Finalizar</string>
     <string name="txt_register_sucess">Cadastro realizado com sucesso!!</string>
-    <string name="menu_professionals">Professionals</string>
-    <string name="menu_places">Places</string>
-    <string name="menu_home">Home</string>
+    <string name="menu_professionals">Profissionais</string>
+    <string name="menu_places">Lugares</string>
+    <string name="menu_home">Inicio</string>
     <string name="menu_blog">Blog</string>
-    <string name="menu_profile">Profile</string>
-
-
+    <string name="menu_profile">Perfil</string>
+    <string name="menu_appointment">Consultas</string>
 </resources>
