--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -41,5 +41,8 @@
     <string name="menu_blog">Blog</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_appointment">Appointments</string>
+    <string name="tv_title_professional">professionals</string>
+    <string name="txt_learn_more">Saiba mais</string>
+    <string name="txt_hint_professional_name">Nome do profissional</string>
 
 </resources>
