--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="menu_blog">Blog</string>
     <string name="menu_profile">Perfil</string>
     <string name="menu_appointment">Consultas</string>
+    <string name="tv_title_professional">professionals</string>
+    <string name="txt_learn_more">Saiba mais</string>
+    <string name="txt_hint_professional_name">Nome do profissional</string>
 </resources>
