--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -44,5 +44,6 @@
     <string name="tv_title_professional">professionals</string>
     <string name="txt_learn_more">Saiba mais</string>
     <string name="txt_hint_professional_name">Nome do profissional</string>
+    <string name="txt_rating_appointment">De 0 a 5 avalie o atendimento</string>
 
 </resources>
