refactor: centraliz reycler view

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -45,5 +45,7 @@
     <string name="txt_learn_more">Saiba mais</string>
     <string name="txt_hint_professional_name">Nome do profissional</string>
     <string name="txt_rating_appointment">De 0 a 5 avalie o atendimento</string>
+    <string name="tv_title_places">Lugares acessíveis</string>
+    <string name="txt_hint_place_name">Nome de lugar</string>
 
 </resources>
