--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="txt_rating_appointment">De 0 a 5 avalie o atendimento</string>
     <string name="txt_feedback">Deixe seu feedback</string>
     <string name="txt_appointment_data">Dados da consulta</string>
+    <string name="tv_title_places">Lugares acessíveis</string>
+    <string name="txt_hint_place_name">Nome de lugar</string>
 </resources>
