--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -47,5 +47,7 @@
     <string name="txt_rating_appointment">De 0 a 5 avalie o atendimento</string>
     <string name="tv_title_places">Lugares acessíveis</string>
     <string name="txt_hint_place_name">Nome de lugar</string>
+    <string name="txt_speciality">Speciality</string>
+    <string name="settings">Configurações</string>
 
 </resources>
