--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -48,6 +48,7 @@
     <string name="tv_title_places">Lugares acessíveis</string>
     <string name="txt_hint_place_name">Nome de lugar</string>
     <string name="txt_speciality">Speciality</string>
-    <string name="settings">Configurações</string>
+    <string name="settings">Configurations</string>
+    <string name="txt_exit">Exit</string>
 
 </resources>
