--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="txt_hint_place_name">Nome de lugar</string>
     <string name="txt_speciality">Especialidade</string>
     <string name="settings">Configurações</string>
+    <string name="txt_exit">Sair</string>
 </resources>
