--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -50,5 +50,8 @@
     <string name="txt_speciality">Speciality</string>
     <string name="settings">Configurations</string>
     <string name="txt_exit">Exit</string>
+    <string name="txt_back">Voltar</string>
+    <string name="menu_settings">Settings</string>
+    <string name="lbl_address">Endereço</string>
 
 </resources>
