--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="enviar">Enviar</string>
     <string name="digite_aqui">Digite aqui:</string>
     <string name="txt_exit">Sair</string>
+    <string name="txt_back">Voltar</string>
+    <string name="menu_settings">Settings</string>
+    <string name="lbl_address">Endereço</string>
 </resources>
