--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -54,4 +54,8 @@
     <string name="menu_settings">Settings</string>
     <string name="lbl_address">Endereço</string>
 
+    <string name="calendar_user" translatable="false">user</string>
+    <string name="calendar_offline" translatable="false">offline</string>
+    <string name="calendar_primary" translatable="false">primary</string>
+    <string name="date_format_patterns" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss</string>
 </resources>
