--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,9 @@
     <string name="txt_back">Voltar</string>
     <string name="menu_settings">Settings</string>
     <string name="lbl_address">Endereço</string>
+
+    <string name="calendar_user" translatable="false">user</string>
+    <string name="calendar_offline" translatable="false">offline</string>
+    <string name="calendar_primary" translatable="false">primary</string>
+    <string name="date_format_patterns" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss</string>
 </resources>
